stderr
JudgeMan.java:90: error: ')' expected
            } else if(args[i].substring(1).equals("J"){
                                                      ^
JudgeMan.java:92: error: ')' expected
            } else if(args[i].substring(1).equals("Q"){
                                                      ^
JudgeMan.java:94: error: ')' expected
            } else if(args[i].substring(1).equals("K"){
                                                      ^
3 errors
